<?xml version="1.0"?>
<package format="3">
  <name>robot_mapper</name>
  <version>0.0.1</version>
  <description>ROS2 robot mapper for Raspberry Pi + L298N + YDLidar X4</description>

  <maintainer email="akril@example.com">akril</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
